fix: Welcome screen scroll clipping
- Fixed a Flexbox bug (justify-content: center) that was causing the tall SEO landing content to be clipped at the top of the viewport and hiding it from the user. Changed to flex-start with padding-top.

--- a/public/style.css
+++ b/public/style.css
@@ -1067,9 +1067,12 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-top: 10vh;
+  padding-bottom: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
   flex: 1;
-  padding: 20px;
   text-align: center;
 }
 
